--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,90 +1,96 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-	<a href="{{ path('homepage') }}"><img src="\images\logo-letrading.png"></a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarColor01">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
-			</li>
-			{% if app.user != null and app.user.payments | length > 0 %}
-				<li class="nav-item">
-					<a class="nav-link" href="{{ path('formation_index') }}">Formations</a>
-				</li>
-			{% endif %}
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Discussions</a>
-				<ul class="dropdown-menu dropdown-menu-center">
-					{{ render(controller(
-                            'App\\Controller\\PagesController::getThreads'
-                        ))
-                    }}
-				</ul>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Live</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{{ path('historic_index') }}">Historique</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{{ path('offers_index') }}">Offres</a>
-			</li>
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#">Divers</a>
-				<div class="dropdown-menu dropdown-menu-center">
-					<a href="#" class="dropdown-item">Témoignage</a>
-					<a href="#" class="dropdown-item">Lexique</a>
-					<a href="#" class="dropdown-item">Qui sommes nous ?</a>
-					<a href="#" class="dropdown-item">Parrainage</a>
-					<a href="#" class="dropdown-item">Affiliation</a>
-					<div class="dropdown-divider"></div>
-					<a href="{{ path('pages_contact') }}" class="dropdown-item">Contactez nous</a>
-				</div>
-			</li>
-		</ul>
-		<ul class="navbar-nav ml-auto">
-			{% if app.user %}
-                {{ render(controller(
-                    'App\\Controller\\PagesController::getNotifs'
-                	))
-                }}
-				{{ render(controller('App\\Controller\\PagesController:getMessagesUnread')) }}
-
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#">
-						{% if app.user.media %}
-							<img src="{{ vich_uploader_asset(app.user.media, 'avatarFile', 'App\\Entity\\Media') }}" class="avatar avatar-mini" alt="{{ app.user.fullName }}">
-							{{ app.user.fullName }}
-						{% else %}
-							<img src="{{ asset('images/image-user.png') }}" alt="Avatar de {{ app.user.pseudo }}" class="avatar avatar-mini"/>
-							{{ app.user.fullName }}
-						{% endif %}
-					</a>
-
-					<div class="dropdown-menu dropdown-menu-right">
-						<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
-						<a href="{{ path('manage_souscription') }}" class="dropdown-item">Mes abonnements</a>
-						<a href="{{ path('account_payments') }}" class="dropdown-item">Mes paiements</a>
-						<div class="dropdown-divider"></div>
-						<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
-					</div>
-				</li>
-                {% if is_granted('ROLE_ADMIN') %}
+<nav class="row justify-content-center navbar navbar-expand-lg navbar-dark bg-primary">
+	<div class="col-10">
+		<div class="row d-flex align-items-center">
+			<div class="col-2 mr-4 p-0">
+				<a href="{{ path('homepage') }}"><img src="\images\templating\header\Logo-final-blanc-resize.png"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+			</div>
+			<div class="col-6 p-0">
+				<ul class="navbar-nav mr-auto main-navbar">
 					<li class="nav-item">
-						<a class="nav-link" href="{{ path('admin_dashboard') }}" target="_blank"><i class="fas fa-user-cog"></i> Administration</a>
+						<a class="nav-link" href="{{ path('homepage') }}">Accueil</a>
 					</li>
-                {% endif %}
-			{% else %}
-				<li class="nav-item">
-					<a class="nav-link" href="{{ path('account_register') }}">Inscription</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
-				</li>
-			{% endif %}
-		</ul>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('formation_index') }}">Formations</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-arrow" href="#" data-toggle="dropdown">Discussions</a>
+						<ul class="dropdown-menu dropdown-menu-center">
+							{{ render(controller(
+								'App\\Controller\\PagesController::getThreads'
+							))
+							}}
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link live-icon" href="#">Live</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('historic_index') }}">Historique</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('offers_index') }}">Offres</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-arrow" href="#">Divers</a>
+						<div class="dropdown-menu dropdown-menu-center">
+							<a href="#" class="dropdown-item">Témoignage</a>
+							<a href="#" class="dropdown-item">Lexique</a>
+							<a href="#" class="dropdown-item">Qui sommes nous ?</a>
+							<a href="#" class="dropdown-item">Parrainage</a>
+							<a href="#" class="dropdown-item">Affiliation</a>
+							<div class="dropdown-divider"></div>
+							<a href="{{ path('pages_contact') }}" class="dropdown-item">Contactez nous</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+			<div class="col-3 p-0">
+				<ul class="navbar-nav right-navbar">
+					{% if app.user %}
+						{{ render(controller(
+							'App\\Controller\\PagesController::getNotifs'
+						))
+						}}
+						{{ render(controller('App\\Controller\\PagesController:getMessagesUnread')) }}
+
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#">
+								{% if app.user.media %}
+									<img src="{{ vich_uploader_asset(app.user.media, 'avatarFile', 'App\\Entity\\Media') }}" class="avatar avatar-mini" alt="{{ app.user.fullName }}">
+									{{ app.user.fullName }}
+								{% else %}
+									<img src="{{ asset('images/image-user.png') }}" alt="Avatar de {{ app.user.pseudo }}" class="avatar avatar-mini"/>
+									{{ app.user.fullName }}
+								{% endif %}
+							</a>
+
+							<div class="dropdown-menu dropdown-menu-right">
+								<a href="{{ path('account_index') }}" class="dropdown-item">Mon compte</a>
+								<a href="{{ path('manage_souscription') }}" class="dropdown-item">Mes abonnements</a>
+								<a href="{{ path('account_payments') }}" class="dropdown-item">Mes paiements</a>
+								<div class="dropdown-divider"></div>
+								<a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+							</div>
+						</li>
+						{% if is_granted('ROLE_ADMIN') %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('admin_dashboard') }}" target="_blank"><i class="fas fa-user-cog"></i> Administration</a>
+							</li>
+						{% endif %}
+					{% else %}
+						<li class="nav-item inscription-homepage">
+							<a class="nav-link" href="{{ path('account_register') }}">Inscription</a>
+						</li>
+						<li class="nav-item connexion-homepage">
+							<a class="nav-link" href="{{ path('account_login') }}">Connexion</a>
+						</li>
+					{% endif %}
+				</ul>
+			</div>
+		</div>
 	</div>
 </nav>
 {% for label, messages in app.flashes %}
