--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,44 @@
-<footer class="bg-primary py-5 text-center" style="color:white;">
-    <p>Copyright Le Trading !</p>
-</footer>
+<div class="footer-background">
+    <div class="row justify-content-center m-0">
+        <div class="col-10 mt-9 d-flex vertical-align-super">
+            <hr class="col-lg-5 col-sm-4 col-3 hr-footer primary-text-color mt-4">
+            <div class="col-lg-1 col-sm-2 col-3 text-center">
+                <img class="img-fluid" src="/images/templating/logo-letrading-small.png">
+            </div>
+            <hr class="col-lg-5 col-sm-4 col-3 hr-footer primary-text-color mt-4">
+        </div>
+    </div>
+    <div class="row justify-content-center m-0">
+        <div class="col-10 mt-5 mb-5 p-0 d-md-flex">
+            <div class="col-12 col-md-4">
+                <p class="secondary-color-grey-dark">
+                    © leTrading.fr • Droits Réservés
+                    JC Trading Academy SAS, R.C.S 878 028 216,
+                    Rue de la Boétie 87, 75008 Paris, au capital de 7 000€
+                    <br><br>
+                    NOT FACEBOOK : This site is not a part of the Facebook website or Facebook Inc. Additionally,
+                    This site is NOT endorsed by Facebook in any way. FACEBOOK is a trademark of FACEBOOK, Inc.
+                </p>
+            </div>
+            <br><br>
+            <div class="col-12 col-md-4 text-center bloc-legacy">
+                <a href="" class="primary-text-color">Mentions légales</a>
+                <br>
+                <a href="" class="primary-text-color">Conditions générales de vente</a>
+                <br>
+                <a href="" class="primary-text-color">Politique de confidentialité</a>
+                <br><br>
+                <div class="btn-secondary-custom mt-4">
+                    <a class="d-block" href="">Avertissement sur les risques</a>
+                </div>
+            </div>
+            <br><br>
+            <div class="col-12 col-md-4 text-md-right text-center">
+                <a class="m-2" href=""><img src="/images/templating/footer/icon-messenger.png"></a>
+                <a class="m-2" href=""><img src="/images/templating/footer/icon-facebook.png"></a>
+                <a class="m-2" href=""><img src="/images/templating/footer/icon-instagram.png"></a>
+                <a class="m-2" href=""><img src="/images/templating/footer/icon-twitter.png"></a>
+            </div>
+        </div>
+    </div>
+</div>
