--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,10 @@
 		</title>
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
-		<link rel="stylesheet" href="/css/app.css"> {% block stylesheets %}{% endblock %}
+		<link rel="stylesheet" href="/css/owl.carousel.min.css">
+		<link rel="stylesheet" href="/css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="/css/app.css">
+		{% block stylesheets %}{% endblock %}
 		</head>
 		<body>
 			{% include 'partials/header.html.twig' %}
@@ -16,6 +19,7 @@
 			{% include 'partials/footer.html.twig' %}
 			<script src="https://js.stripe.com/v3/"></script>
 			<script src="/js/jquery.min.js"></script>
+			<script src="/js/owl.carousel.min.js"></script>
 			<script src="/js/popper.min.js"></script>
 			<script src="/js/bootstrap.min.js"></script>
 			<script src="/js/main.js"></script>
