--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -3,20 +3,33 @@
 {% block title %}Contactez nous{% endblock %}
 
 {% block body %}
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-            <div id="contactForm" class="py-3 px-3">
-                <h1>Formulaire de contact</h1>
-                {{form_start(form)}}
-                {{form_widget(form)}}
-                <button type="submit" class="btn btn-success">Contactez nous</button>
-                {{form_end(form)}}
+    {#'breadcrumbs':[
+    ['contact', 'pages_contact'],
+    ['user', 'user_show', {
+    'pseudo' : 'gshields'
+    }]
+    ['forum', 'thread_post_like', 'multiple']
+    ]#}
+    {% include '/partials/breadcrumb.html.twig'
+        with {
+            'breadcrumbs':[
+                ['contact', 'pages_contact']
+            ],
+            'content':'Formulaire de contact'
+        }
+    %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div id="contactForm" class="py-3 px-3">
+                    <h1>Formulaire de contact</h1>
+                    {{form_start(form)}}
+                    {{form_widget(form)}}
+                    <button type="submit" class="btn btn-success">Contactez nous</button>
+                    {{form_end(form)}}
+                </div>
             </div>
         </div>
     </div>
-</div>
-
 {% endblock %}
