--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,4 +1,4 @@
-<div class="header-background">
+<div class="{% if app.request.pathInfo == "/" %}header-home-background {% else %}header-background {% endif %}">
 	<nav class="row justify-content-center m-0 navbar navbar-expand navbar-dark">
 		<div class="col-10">
 			<div class="row d-flex align-items-center">
