--- a/templates/partials/breadcrumb.html.twig
+++ b/templates/partials/breadcrumb.html.twig
@@ -1,7 +1,7 @@
 <hr class="col-10 hr-footer primary-text-color w-75 ">
-<div class="d-flex justify-content-center p-5 text-center">
+<div class="d-flex justify-content-center p-4 text-center">
     <div class="col-md-6 col-10">
-        <p class="text-white font-weight-light">
+        <p class="text-white font-weight-light m-0">
             <a class="primary-text-color text-decoration-none" href="{{ path('homepage') }}">Accueil</a>
             >
             {#récupération du fil d'ariane#}
@@ -39,16 +39,16 @@
             {% endfor %}
         </p>
         {% if content %}
-            <h1 class="text-white mt-2 h2">{{ content }}</h1>
+            <h1 class="text-white h2">{{ content }}</h1>
         {% endif %}
     </div>
 </div>
-<div class="row justify-content-center">
-    <div class="w-75 d-flex">
-        <hr class="col-lg-5 col-sm-4 col-3 hr-footer primary-text-color mt-3">
+<div class="row justify-content-center mb-5 m-0">
+    <div class="w-80 d-flex justify-content-center">
+        <hr class="col-lg-5 col-sm-4 col-3 hr-footer primary-text-color mt-3 m-0">
         <div class="col-lg-1 col-sm-2 col-3 text-center">
             <img class="img-fluid avatar-mini" src="/images/templating/logo-letrading-small.png">
         </div>
-        <hr class="col-lg-5 col-sm-4 col-3 hr-footer primary-text-color mt-3">
+        <hr class="col-lg-5 col-sm-4 col-3 hr-footer primary-text-color mt-3 m-0">
     </div>
 </div>
