--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -19,14 +19,18 @@
         }
     %}
     <div class="container">
-        <div class="row">
-            <div class="col-md-3"></div>
+        <div class="row justify-content-center">
             <div class="col-md-6">
-                <div id="contactForm" class="py-3 px-3">
-                    <h1>Formulaire de contact</h1>
+                <div class="py-3 px-3 d-flex justify-content-center">
                     {{form_start(form)}}
+                    <div class="col-6 float-left pl-0">
+                        {{ form_row(form.firstName) }}
+                    </div>
+                    <div class="col-6 float-left pr-0">
+                        {{ form_row(form.lastName) }}
+                    </div>
                     {{form_widget(form)}}
-                    <button type="submit" class="btn btn-success">Contactez nous</button>
+                    <button type="submit" class="btn btn-form-custom">Envoyer </button>
                     {{form_end(form)}}
                 </div>
             </div>
