--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -43,7 +43,7 @@
 						<li class="nav-item dropdown d-inline-block d-md-flex">
 							<a class="nav-link dropdown-arrow" href="#" data-toggle="dropdown">Divers</a>
 							<ul class="dropdown-menu dropdown-menu-center">
-								<li><a href="#" class="dropdown-item">Témoignage</a></li>
+								<li><a href="{{ path('temoignages_page') }}" class="dropdown-item">Témoignage</a></li>
 								<li><a href="#" class="dropdown-item">Lexique</a></li>
 								<li><a href="#" class="dropdown-item">Qui sommes nous ?</a></li>
 								<li><a href="#" class="dropdown-item">Parrainage</a></li>
